# MapFoo

./: build.gradle  gradle.properties
app/: CMakeLists.txt  MapFooDebugKey.jks  MapFooKey.jks  build.gradle
app/src/androidTest/java/com/infinitytech/mapfoo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: fragment_shader.glsl  fragment_snow.glsl  fragment_texture.glsl  vertex_shader.glsl
app/src/main/cpp/: CMakeLists.txt  jni-renderer.cpp  triangle-lib.cpp
app/src/main/cpp/utils/: android-utils.cpp  android-utils.h  egl-utils.cpp  egl-utils.h  gl-utils.cpp  gl-utils.h
app/src/main/java/com/infinitytech/mapfoo/: BaseActivity.kt  BaseFragment.kt  FullScreenBehavior.kt  MainActivity.kt  MapFragment.kt  TextFragment.kt  TriangleLib.kt  (+1 more)
app/src/main/res/anim/: fragment_enter.xml  fragment_exit.xml
app/src/main/res/drawable/: anim_drawable.xml  bg_edit_text.xml  gradient_vertical_white.xml  gradient_white.xml  ic_twotone_cancel_24px.xml  ic_twotone_history_24px.xml  ic_twotone_location_on_24px.xml
app/src/main/res/layout/: activity_address.xml  activity_main.xml  activity_map.xml  bottom_dialog.xml  fragment_address.xml  fragment_location_selector.xml  fragment_map.xml  fragment_text.xml  item_address_tip.xml  search_bar_focused.xml  search_bar_normal.xml  searchbar_focused.xml  searchbar_normal.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-v23/: styles.xml
app/src/main/res/xml/: searchbar_states.xml
gradle/wrapper/: gradle-wrapper.properties
(+18 files in other folders)
